All functionality in serveML working and testable through test_serveML.py

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Virtual environments for testing
+serveML/
+
+# Any .pkl files in products directory
+products/*.pkl
